feat: Add Bailian translation model support
Integrates Alibaba Cloud's Bailian translation service as an alternative to Gemini. This includes:
- Conditional UI rendering for the Bailian model based on environment variables.
- New environment variables for Bailian API key and App ID.
- Updates to `geminiService` to improve prompt specificity and error handling.
- Refinements in `excelService` to correctly handle merged cells and avoid duplicate processing.
- Version bumps and dependency updates.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-M" />
+    <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Excel AI Translator</title>
@@ -9,10 +9,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/exceljs/4.4.0/exceljs.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <style>
-      body {
-        font-family: 'Inter', sans-serif;
-      }
       @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;500;700&display=swap');
+      body {
+        font-family: 'Inter', 'Noto Sans SC', sans-serif;
+      }
     </style>
   <script type="importmap">
 {
